# LockBit_Downloader

./: .gitignore  README.md  docker-compose.yml  downloader.py  downloader_v2.py  downloader_v2_link.py  pyproject.toml  web_driver.py
app/: pyproject.toml
app/scripts/: format-import.sh
app/src/: lockbit_crawler.py
scripts/: lint.sh
