[tool.poetry]
name = "lockbit_crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.28.1"
ratelimit = "^2.2.1"
backoff = "^2.2.1"
types-pycurl = "^7.45.1"
types-requests = "^2.28.11"
pycurl = {version = "^7.45.1", platform = "x86_64"}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.7.7"
mypy = "^0.991"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
